[package]
name = "aeonium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.14.0"
anyhow = "1.0.62"
clap = "3.2.17"
timer = "0.2.0"
chrono = "0.4.22"
tui = "0.19.0"
crossterm = "0.25.0"
unicode-width = "0.1.9"